--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,23 @@ find_library(PQXX_LIB pqxx REQUIRED)
 find_library(PQ_LIB pq REQUIRED)
 
 add_subdirectory(nlohmann)
+add_subdirectory(DBWork)
 add_subdirectory(DBConnection)
+add_subdirectory(SQLProvider)
+add_subdirectory(DataModel)
 
 add_executable(${PROJECT_NAME} dbMain.cpp)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${PQXX_LIB} ${PQ_LIB} DBConnection)
+target_link_libraries(${PROJECT_NAME} PUBLIC ${PQXX_LIB} ${PQ_LIB} DBConnection DBWork SQLProvider DATAMODEL)
 
 set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-w -lm -g -O0 -Wall -W -fprofile-arcs -ftest-coverage -Llibs -lpq -lpqxx")
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${DBCONNECTION_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${DBCONNECTION_INCLUDE_DIRS} ${DBWork_INCLUDE_DIRS})
  
-target_link_libraries(${PROJECT_NAME} PRIVATE ${DBCONNECTION_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${DBCONNECTION_LIBRARIES} ${DBWork_LIBRARIES})
 
 
 if (${TEST})
-    add_subdirectory(test/dbtest)
+    add_subdirectory(test/dbTest)
 endif ()
