--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,22 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: make build && make run  
+
+  coverage:
+    runs-on: ubuntu-latest
+    container: dnonakolesax/dbcpp
+    needs: [build] 
+
+    services:
+      postgres:
+        image: postgres:latest
+        ports: ["5432:5432"]
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        env:
+          POSTGRES_USER: 'dnonakolesax'
+          POSTGRES_PASSWORD: '228'
+          POSTGRES_BD: 'chaihona'
+
+    steps:
+    - uses: actions/checkout@v3
+    - run: make build && make coverage        
