client is almost ready

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,13 @@ enable_testing()
 find_package(GTest REQUIRED)
 #include(GoogleTest)
 
-add_subdirectory(lib/server)
+#add_subdirectory(lib/server)
+#add_subdirectory(lib/Client)
+#include(lib/Client/CMakeLists.txt)
 
-add_executable(server_part src/main.cpp)
-target_link_libraries(server_part server)
+file(GLOB CPPS "lib/Client/src/*.cpp")
+add_executable(server_part ${CPPS} src/main.cpp)
+target_include_directories(server_part PUBLIC ~/park/boost_1_82_0)
+target_include_directories(server_part PUBLIC lib/Client/include)
+#target_link_libraries(server_part server)
+#target_link_libraries(server_part client)
