handle requests almost ready, left response handle for client, correct send response, match checker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,10 @@ find_package(GTest REQUIRED)
 #include(lib/Client/CMakeLists.txt)
 
 file(GLOB CPPS "lib/Client/src/*.cpp")
-add_executable(server_part ${CPPS} src/main.cpp)
+file(GLOB STRUCTCPPS "lib/structures/src/*.cpp")
+add_executable(server_part ${CPPS} ${STRUCTCPPS} src/main.cpp )
 target_include_directories(server_part PUBLIC ~/park/boost_1_82_0)
+target_include_directories(server_part PUBLIC lib/structures/include)
 target_include_directories(server_part PUBLIC lib/Client/include)
 #target_link_libraries(server_part server)
 #target_link_libraries(server_part client)
