--- a/vectorization/CMakeLists.txt
+++ b/vectorization/CMakeLists.txt
@@ -7,6 +7,7 @@ set(vect_HEADERS include/text_processing.hpp include/tfidf_vectorization.hpp)
 
 add_library(vectorization STATIC ${vect_SOURCES} ${vect_HEADERS})
 
+target_include_directories(${PROJECT_NAME} PUBLIC src include)
 target_link_libraries(vectorization)
 
 include_directories(src include)
