--- a/filtering/CMakeLists.txt
+++ b/filtering/CMakeLists.txt
@@ -8,6 +8,7 @@ set(vect_HEADERS ../vectorization/include)
 
 add_library(filtering ${SOURCES} ${HEADERS})
 
+target_include_directories(${PROJECT_NAME} PUBLIC src include)
 target_link_libraries(filtering vectorization)
 
 include_directories(src include ${vect_HEADERS})
