--- a/vectorization/CMakeLists.txt
+++ b/vectorization/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
-
+set(CMAKE_CXX_STANDARD 17)
 project(vectorization)
 
-set(vect_SOURCES src/text_processing.cpp src/tfidf_vectorization.cpp)
-set(vect_HEADERS include/text_processing.hpp include/tfidf_vectorization.hpp)
+file(GLOB SOURCES src/*.cpp)
+file(GLOB HEADERS include/*.hpp)
 
-add_library(vectorization STATIC ${vect_SOURCES} ${vect_HEADERS})
-
-target_link_libraries(vectorization)
-
+add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
+target_include_directories(${PROJECT_NAME} PUBLIC src include)
+target_link_libraries(${PROJECT_NAME} )
 include_directories(src include)
